--- a/Portramatic/Views/MainWindow.axaml
+++ b/Portramatic/Views/MainWindow.axaml
@@ -45,7 +45,7 @@
             </Grid>
         </TabItem>
         <TabItem Header="Crop">
-            <Grid RowDefinitions="80, *" ColumnDefinitions="400, 650" Margin="20">
+            <Grid RowDefinitions="80, *, Auto" ColumnDefinitions="400, 650" Margin="20">
                 <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" ColumnDefinitions="Auto, Auto, *, Auto, Auto"
                       RowDefinitions="Auto, Auto">
                     <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Margin="5, 0">URL:</TextBlock>
@@ -54,11 +54,12 @@
                     </Button>
                     <TextBox x:Name="UrlBox" Grid.Column="2" Grid.Row="0" FontSize="12" Margin="5, 0" />
                     <TextBox Grid.Column="3" Grid.Row="0" x:Name="ImageHash" Margin="5, 0" IsEnabled="False" />
-                    <Button Grid.Column="4" Grid.Row="0" x:Name="ExportButton" Margin="5, 0">Export</Button>
+                    <Button Grid.Column="4" Grid.Row="0" x:Name="ExportButton" Margin="5, 0" HorizontalContentAlignment="Stretch">Export</Button>
 
                     <TextBlock Grid.Row="1" Grid.Column="0" Margin="5">Tags:</TextBlock>
                     <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" FontSize="12" Margin="5, 0" x:Name="Tags" />
-                    <Button Grid.Column="3" Grid.Row="1" Grid.ColumnSpan="2" x:Name="InstallButton" Margin="5, 0">Install To Game Folder(s)</Button>
+                    <Button Grid.Column="3" Grid.Row="1" x:Name="InstallButton" Margin="5, 0">Install To Game Folder(s)</Button>
+                    <Button Grid.Column="4" Grid.Row="1" x:Name="ResetButton" Margin="5, 0" Click="ResetTransforms">Reset Image Transforms</Button>
                 </Grid>
 
                 <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Grid.ColumnDefinitions="Auto, Auto, Auto"
@@ -111,6 +112,10 @@
                         </Viewbox>
                     </StackPanel>
                 </Grid>
+                
+                <TextBlock Grid.Row="2" FontSize="14" Grid.ColumnSpan="2">
+                    Drag the Images with the mouse to move them. Zoom them with the mouse-wheel. Rotate with mouse-wheel + ALT
+                </TextBlock>
 
             </Grid>
         </TabItem>
