--- a/Portramatic/Views/MainWindow.axaml
+++ b/Portramatic/Views/MainWindow.axaml
@@ -54,7 +54,10 @@
                     </Button>
                     <TextBox x:Name="UrlBox" Grid.Column="2" Grid.Row="0" FontSize="12" Margin="5, 0" />
                     <TextBox Grid.Column="3" Grid.Row="0" x:Name="ImageHash" Margin="5, 0" IsEnabled="False" />
-                    <Button Grid.Column="4" Grid.Row="0" x:Name="ExportButton" Margin="5, 0" HorizontalContentAlignment="Stretch">Export</Button>
+                    <StackPanel Grid.Column="4" Grid.Row="0" Margin="5, 0" Orientation="Horizontal">
+                        <Button x:Name="ExportButton" HorizontalContentAlignment="Stretch">Export</Button>
+                        <Button x:Name="ResaveButton" Click="Resave">Resave</Button>
+                    </StackPanel>
 
                     <TextBlock Grid.Row="1" Grid.Column="0" Margin="5">Tags:</TextBlock>
                     <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" FontSize="12" Margin="5, 0" x:Name="Tags" />
